help page layout issue fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,4 @@
 @charset "utf-8";
-
-
-/* Header */
-.navbar {
-	background-color: #ffffff;
-	height: 50px;
-	/*border-bottom: 4px solid #D52B1E;*/
-	color: #333333;
-}
 .header-button {
 	width: 50px;
 	height: 45px;
